apps/display_mam2022/style.css
body
{
  font-family: Helvetica, Sans-Serif;
  margin:0;
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  overflow-y: hidden;
  /* cursor: none; */
  background-color: black;
}
img{
  -webkit-user-drag: none;
}

/*HIDE SCROLLBAR*/
*{
  -ms-overflow-style: none;
  scrollbar-width: none;
}
*::-webkit-scrollbar {
  display: none;
}

/*FONTS*/
@font-face {
    font-family: 'Heimat-Stencil-SemiBold';
    src: url('assets/fonts/Heimat-Stencil-SemiBold.otf');
}
@font-face {
    font-family: 'MinionPro-Regular';
    src: url('assets/fonts/MinionPro-Regular.otf');
}
@font-face {
    font-family: 'Akkurat';
    src: url('assets/fonts/Akkurat.ttf');
}
/*TYPO*/
*{
  font-family: 'Akkurat';
  font-size: 24px;
}
.title{
  font-family: 'Heimat-Stencil-SemiBold';
  font-size: 28px;
}
/*INTERACT*/
.btn, .scrollbar_container, .item, #videoplayer{
  cursor:pointer;
}
.btn{
  opacity: 0.9;
}
.btn:hover{
  opacity: 1;
}
.btn:active{
  opacity: 0.7;
}

/*LOGGER*/
.logger{
  position:absolute;
  z-index:100;
  color: white;
  width: 40%;
  max-height: 30vh;
  top:20px;
  left:20px;
  pointer-events: none;
}

/*PAGES*/
.page{
  position: absolute;
  top:0;
  left:0;
  width:100vw;
  height:100vh;
  background-color: black;
  overflow-y: hidden;
}

#page_browser{
  display: flex;
  align-items: center;
  justify-content: center;
  overflow-y: scroll;
  flex-wrap: wrap;
}
#page_browser .grid{
  width:100%;
  padding: 2% 5% 2% 5%;
  /* GRID */
  /* display:grid; */
  /* grid-template-columns: repeat(auto-fit, minmax(min(20%), 1fr)); */
  /* xx% defines max columns qty */
  /* grid-gap: 3vw 3vw; */
  /* FLEX */
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}
#page_browser .item{
  background-color: rgb(216,97,99);
  width:100%;
  /* GRID */
  /* max-width: 50vw; */
  /* margin: auto; */
  /* margin-top:0; */
  /* height: -webkit-fill-available; */
  /* FLEX */
  max-width: 50vw;
  flex: 1;
  min-width:20%;
  margin: 1.5%;
}
#page_browser .item .infos *{
  width:100%;
}

#page_browser .item .image_wrapper{
  width: 100%;
  overflow-y: hidden;
  object-fit: cover;
}
#page_browser .item .image_wrapper img{
  width: 100%;
}

#page_browser .item .infos{
  padding: 2em;
  overflow-x: hidden;
}
.item .infos .title{
  line-height:1em;
  min-height:3em;
  margin-bottom: 1em;
  border-bottom: 1px solid black;
}
.item .infos .subtitle{
  margin-top: 1em;
  margin-bottom: 1em;
}


/*PLAYER*/
#page_video{
  color:white;
}
#page_video #videoplayer{
  z-index:1;
  position:absolute;
  width: 100%;
  height:100%;
  max-height: 100%;
}
#page_video .time{
  display:none;
}
#page_video .scrollbar_container{
  position: absolute;
  width: 80%;
  bottom: calc(5vh + 30px);
  left: 10%;
  z-index: 10;
  box-sizing: border-box;
}
#page_video .scrollbar_container .scrollbar_left{
  position: absolute;
  background-color: #ababab;
  height:10px;
  padding: 15px 0 15px 0;
  background-clip: content-box;
  width:0%;
}
#page_video .scrollbar_container .scrollbar_tick{
  position: absolute;
  background-color: white;
  height: 20px;
  margin-left: 0%;
  width: 3px;
  margin-top: 10px;
}
#page_video .scrollbar_container .scrollbar_background{
  position: absolute;
  background-color: #ababab;
  opacity:0.3;
  height:10px;
  padding: 15px 0 15px 0;
  background-clip: content-box;
  width:100%;
}
#page_video .scrollbar_time{
  position: absolute;
  color: #ababab;
  right: 6%;
  bottom: 5vh;
  z-index: 10;
}
#page_video .closer{
  position: absolute;
  width: 2%;
  right: 4%;
  top: 4%;
  z-index: 10;
  display:none;
}

